--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "connect-history-api-fallback": "0.0.4",
     "event-stream": "~3.1.5",
     "gulp": "~3.6.2",
+    "gulp-browserify": "^0.5.0",
     "gulp-clean": "~0.2.4",
     "gulp-concat": "~2.2.0",
     "gulp-connect": "^1.1.1",
@@ -14,9 +15,9 @@
     "gulp-less": "~1.2.3",
     "gulp-load-plugins": "^0.5.1",
     "gulp-rename": "~1.2.0",
-    "gulp-uglify": "^0.2.1",
     "gulp-util": "~2.2.14",
     "jshint-stylish": "~0.2.0",
+    "mithril": "^0.1.16",
     "proxy-middleware": "^0.5.0"
   }
 }
