--- a/package.json
+++ b/package.json
@@ -3,21 +3,36 @@
   "description": "A quick setup for Mithril projects.",
   "repository": "https://github.com/velveteer/mithril-boilerplate",
   "devDependencies": {
+    "browserify": "^3.33.1",
+    "connect": "^2.14.4",
     "connect-history-api-fallback": "0.0.4",
-    "event-stream": "~3.1.5",
-    "gulp": "~3.6.2",
-    "gulp-browserify": "^0.5.0",
+    "connect-livereload": "^0.4.0",
+    "connect-prism": "^0.5.0",
+    "grunt": "^0.4.5",
+    "gulp": "^3.8.7",
+    "gulp-cache": "^0.2.0",
     "gulp-clean": "~0.2.4",
     "gulp-concat": "~2.2.0",
-    "gulp-connect": "^1.1.1",
     "gulp-csso": "~0.2.8",
+    "gulp-filter": "^1.0.0",
+    "gulp-imagemin": "^0.6.2",
+    "gulp-jscs": "^1.0.0",
     "gulp-jshint": "^1.5.6",
     "gulp-less": "~1.2.3",
-    "gulp-load-plugins": "^0.5.1",
+    "gulp-livereload": "^2.1.0",
+    "gulp-minify-css": "^0.3.7",
+    "gulp-minify-html": "^0.1.4",
+    "gulp-notify": "^1.4.1",
+    "gulp-plumber": "^0.6.4",
     "gulp-rename": "~1.2.0",
+    "gulp-uglify": "^0.3.1",
+    "gulp-useref": "^0.5.0",
     "gulp-util": "~2.2.14",
     "jshint-stylish": "~0.2.0",
-    "mithril": "^0.1.18",
-    "proxy-middleware": "^0.5.0"
+    "mithril": "^0.1.19",
+    "pretty-hrtime": "^0.2.1",
+    "vinyl-source-stream": "^0.1.1",
+    "watchify": "^0.10.2",
+    "wiredep": "^1.8.2"
   }
 }
