--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "connect-prism": "^0.5.0",
     "grunt": "^0.4.5",
     "gulp": "^3.8.7",
-    "gulp-cache": "^0.2.0",
+    "gulp-changed": "^1.0.0",
     "gulp-concat": "~2.2.0",
     "gulp-csso": "~0.2.8",
     "gulp-filter": "^1.0.0",
