--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "gulp-changed": "^1.0.0",
     "gulp-concat": "~2.2.0",
     "gulp-csso": "~0.2.8",
-    "gulp-filter": "^1.0.0",
+    "gulp-if": "^1.2.5",
     "gulp-imagemin": "^0.6.2",
     "gulp-jscs": "^1.0.0",
     "gulp-jshint": "^1.5.6",
@@ -25,7 +25,7 @@
     "gulp-plumber": "^0.6.4",
     "gulp-rename": "~1.2.0",
     "gulp-uglify": "^0.3.1",
-    "gulp-useref": "^0.5.0",
+    "gulp-useref": "^1.0.2",
     "gulp-util": "~2.2.14",
     "jshint-stylish": "~0.2.0",
     "mithril": "latest",
