--- a/package.json
+++ b/package.json
@@ -1,38 +1,40 @@
 {
-  "name": "mithril-boilerplate",
+  "name": "mithril-breastplate",
   "description": "A quick setup for Mithril projects.",
-  "repository": "https://github.com/velveteer/mithril-boilerplate",
+  "repository": "https://github.com/soapdog/mithril-breastplate.git",
   "devDependencies": {
-    "browserify": "^6.3.3",
-    "connect": "^2.14.4",
-    "connect-history-api-fallback": "0.0.4",
-    "connect-livereload": "^0.4.0",
-    "connect-prism": "^0.5.0",
+    "browserify": "^12.0.1",
+    "connect": "^3.4.0",
+    "connect-history-api-fallback": "1.1.0",
+    "connect-livereload": "^0.5.4",
+    "connect-prism": "^1.0.4",
     "grunt": "^0.4.5",
     "gulp": "^3.8.7",
     "gulp-changed": "^1.0.0",
-    "gulp-concat": "~2.2.0",
-    "gulp-csso": "~0.2.8",
-    "gulp-if": "^1.2.5",
-    "gulp-imagemin": "^0.6.2",
-    "gulp-jscs": "^1.0.0",
-    "gulp-jshint": "^1.5.6",
-    "gulp-less": "~1.2.3",
-    "gulp-livereload": "^2.1.0",
-    "gulp-minify-css": "^0.3.7",
-    "gulp-minify-html": "^0.1.4",
-    "gulp-notify": "^1.4.1",
-    "gulp-plumber": "^0.6.4",
+    "gulp-concat": "~2.6.0",
+    "gulp-csso": "~1.0.1",
+    "gulp-if": "^2.0.0",
+    "gulp-imagemin": "^2.4.0",
+    "gulp-jscs": "^3.0.2",
+    "gulp-jshint": "^2.0.0",
+    "gulp-less": "~3.0.5",
+    "gulp-livereload": "^3.8.1",
+    "gulp-minify-css": "^1.2.2",
+    "gulp-minify-html": "^1.0.4",
+    "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.0.1",
     "gulp-rename": "~1.2.0",
-    "gulp-uglify": "^0.3.1",
-    "gulp-useref": "^1.0.2",
-    "gulp-util": "~2.2.14",
-    "jshint-stylish": "~0.2.0",
+    "gulp-uglify": "^1.5.1",
+    "gulp-useref": "^3.0.4",
+    "gulp-util": "~3.0.7",
+    "jshint": "^2.8.0",
+    "jshint-stylish": "~2.1.0",
+    "lodash": "^3.0.0",
     "mithril": "latest",
-    "pretty-hrtime": "^0.2.1",
-    "require-dir": "^0.1.0",
-    "vinyl-source-stream": "^0.1.1",
-    "watchify": "^2.0.0",
-    "wiredep": "^1.8.2"
+    "pretty-hrtime": "^1.0.1",
+    "require-dir": "^0.3.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.6.1",
+    "wiredep": "^3.0.0"
   }
 }
